--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission
         android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
         tools:ignore="ProtectedPermissions" /> <!-- 在SDCard中创建与删除文件权限 -->
+    <uses-permission android:name="android.permission.USE_FINGERPRINT" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- 往SDCard写入数据权限 -->
     <uses-permission
         android:name="android.permission.WRITE_SETTINGS"
@@ -38,7 +39,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/FullScreenWithStatusBar">
         <!-- Android 7.0 文件共享配置，必须配置 -->
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -64,7 +65,7 @@
         <activity
             android:name=".app.App"
             android:screenOrientation="portrait"
-            android:theme="@style/FullScreenStyle" />
+            android:theme="@style/FullScreenWithStatusBar" />
         <!-- 固定二维码扫描界面为竖屏方向 -->
         <activity
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
