--- a/app/build.gradle
+++ b/app/build.gradle
@@ -140,9 +140,14 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.airbnb.android:lottie:2.5.4'
     implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
-    implementation 'com.github.iqosjay:ImageSelector:v1.0'//图片选择器
-    implementation 'com.github.iqosjay:QRScanner:2.1.3'//二维码扫描
+    implementation 'com.github.iqosjay:ImageSelector:v1.0'
+    //图片选择器
+    implementation 'com.github.iqosjay:QRScanner:2.1.3'
+    //二维码扫描
     implementation 'com.github.dfqin:grantor:2.5'
     implementation project(':argon2jni')
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support:design:27.1.1'
 }
