--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- 获取网络状态的权限 -->
     <uses-permission android:name="android.permission.INTERNET" /> <!-- 联网权限 -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> <!-- 获取使用WiFi等WLAN无线网络 -->
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission
         android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
         tools:ignore="ProtectedPermissions" /> <!-- 在SDCard中创建与删除文件权限 -->
@@ -40,6 +43,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/FullScreenWithStatusBar">
+
         <!-- Android 7.0 文件共享配置，必须配置 -->
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -50,7 +54,7 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
-        <!--启动页-->
+        <!-- 启动页 -->
         <activity
             android:name=".app.SplashActivity"
             android:screenOrientation="portrait"
@@ -66,36 +70,43 @@
             android:name=".app.App"
             android:screenOrientation="portrait"
             android:theme="@style/FullScreenWithStatusBar" />
-        <!-- 固定二维码扫描界面为竖屏方向 -->
-        <activity
-            android:name="com.journeyapps.barcodescanner.CaptureActivity"
-            android:screenOrientation="portrait"
-            tools:replace="screenOrientation" />
-        <!--相机-->
-        <!--选择照片-->
+        <!--
+         &lt;!&ndash; 固定二维码扫描界面为竖屏方向 &ndash;&gt;
+         <activity
+             android:name="com.journeyapps.barcodescanner.CaptureActivity"
+             android:screenOrientation="portrait"
+             tools:replace="screenOrientation" />
+        -->
+        <!-- 相机 -->
+        <!-- 选择照片 -->
         <activity
             android:name="com.iqos.imageselector.ImageSelectorActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" />
-        <!--预览-->
+        <!-- 预览 -->
         <activity
             android:name="com.iqos.imageselector.PreviewActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <!--裁剪图片-->
+        <!-- 裁剪图片 -->
         <activity
             android:name="com.iqos.imageselector.ClipImageActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <!--扫描二维码-->
+        <!-- 扫描二维码 -->
         <activity
             android:name="com.iqos.qrscanner.app.QRScannerActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <!--选择联系人-->
+        <activity
+            android:name=".app.SelectContactsActivity"
+            android:label="选择联系人"
+            android:theme="@style/MDTheme" />
     </application>
 
 </manifest>
