部分文件修改为Kotlin、实现window.open以及window.close

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -107,6 +107,10 @@
             android:name=".app.SelectContactsActivity"
             android:label="选择联系人"
             android:theme="@style/MDTheme" />
+        <!--第二个WebView-->
+        <activity
+            android:name=".app.SecondWebView"
+            android:theme="@style/FullScreenWithStatusBar" />
     </application>
 
 </manifest>
