--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,8 @@ dependencies {
     implementation 'com.airbnb.android:lottie:2.5.4'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.github.dfqin:grantor:2.5'
+    implementation 'com.github.promeg:tinypinyin:2.0.3' 
+    implementation 'com.github.promeg:tinypinyin-lexicons-android-cncity:2.0.3'
     implementation 'com.github.iqosjay:ImageSelector:v1.0.5'
     implementation 'com.github.iqosjay:QRScanner:2.1.3'
     implementation 'com.github.iqosjay:Argon2Hash:v1.0'
