--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,8 +81,8 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
-    implementation 'com.android.support:design:28.0.0-rc02'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
     implementation 'com.airbnb.android:lottie:2.5.4'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.github.dfqin:grantor:2.5'
