--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,9 +88,9 @@ dependencies {
     implementation 'com.github.dfqin:grantor:2.5'
     implementation 'com.github.promeg:tinypinyin:2.0.3' 
     implementation 'com.github.promeg:tinypinyin-lexicons-android-cncity:2.0.3'
-    implementation 'com.github.iqosjay:ImageSelector:v1.0.5'
-    implementation 'com.github.iqosjay:QRScanner:2.1.3'
-    implementation 'com.github.iqosjay:Argon2Hash:v1.0'
+    implementation 'com.github.GaiaWorld:ImageSelector:v1.0.5'
+    implementation 'com.github.GaiaWorld:QRScanner:2.1.3'
+    implementation 'com.github.GaiaWorld:Argon2Hash:v1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
