--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" /><!--Android 8.0 允许安装未知来源的程序-->
 
     <application
+        android:usesCleartextTraffic="true"
         android:name=".app.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
